<resources>
    <string name="app_name">BitFit</string>

    <!-- tabs -->
    <string name="home_tab">Home</string>
    <string name="run_tab">Run</string>
    <string name="push_up_tab">Push Ups</string>
    <string name="squat_tab">Squats</string>
    <string name="profile_tab">Profile</string>

    <!-- intro -->
    <string name="intro_start_text">Hey, zum Start brauchen wir ein paar Daten von dir!</string>
    <string name="your_gender">Geschlecht</string>
    <string name="choose_gender">Geschlecht auswählen</string>
    <string name="your_age">Geburtstag</string>
    <string name="your_name">Name</string>
    <string name="your_height">Größe (in cm)</string>
    <string name="your_weight">Gewicht (in kg)</string>
    <string name="name_min_characters">Der Name muss mindestens 2 Buchstaben enthalten</string>
    <string name="check_these_information">Überprüfe folgende Angaben:&#160;</string>
    <string name="lets_go">Jetzt kann\'s losgehen!</string>

    <!-- home -->
    <string name="highscore_pushups">Highscore PushUps</string>
    <string name="highscore_squats">Highscore Squats</string>
    <string name="highscore_run">Highscore Run</string>

    <string name="finish">Fertig</string>
    <string name="quit">Beenden</string>
    <string name="action_share">Share</string>
    <string name="action_statistics">Statistics</string>
    <string name="last_activity">Letzte Aktivität</string>

    <string name="start">Start</string>
    <string name="default_timer_value">0:00</string>
    <string name="name">Name:</string>
    <string name="gender">Geschlecht:</string>
    <string name="age">Alter:</string>
    <string name="height">Größe (in cm):</string>
    <string name="weightInKG">Gewicht (in kg):</string>
    <string name="birthday">Geburtstag:</string>
    <string name="save">Speichern</string>
    <string name="instructions">Instructions</string>
    <string name="run">Laufen</string>
    <string name="profile">Profil</string>
    <string name="pushups">Push-Ups</string>
    <string name="squats">Squats</string>
    <string name="home">Home</string>
    <string name="squat_instructions">Nimm das Smartphone mit dem Display nach oben in die Hand und führe die Übung ansonsten wie im Bild gezeigt durch</string>
    <string name="ok">Alles klar!</string>
    <string name="pushup_instructions">Begib dich in die Liegestützposition und lege das Smartphone mit dem Bildschirm nach oben vor dich auf den Boden. Drücke dann auf Start
        und führe die Übung wie im Bild gezeigt durch.\n\n
        Bei ungeeigneten Lichtverhältnissen kann es sein, dass die Push-Ups nicht richtig erkannt werden, dann kannst du auch mit der Nase auf das Display tippen.</string>
    <string name="saved_successfully">Änderungen erfolgreich gespeichert!</string>
    <string name="durationInMillis">Dauer</string>
    <string name="pushups_per_min">Push-Ups/min</string>
    <string name="squats_per_min">Squats/min</string>
    <string name="calories">Kalorien</string>
    <string name="speed">Geschwindigkeit</string>
    <string name="distance">Distanz (km)</string>
    <string name="default_double_value">0.0</string>
    <string name="gender_male">männlich</string>
    <string name="gender_female">weiblich</string>
    <string name="no_last_activity">Keine letzte Aktivität vorhanden!</string>
    <string name="no_highscore">Noch kein Highscore vorhanden!</string>
    <string name="current_month">Aktueller Monat</string>
    <string name="last_7_workouts">Letzte 7 Workouts</string>
    <string name="history">Verlauf</string>
    <string name="need_permission">Berechtigung benötigt!</string>
    <string name="need_permission_storage_message">Diese App braucht die Berechtigung um das Share-Feature nutzen zu können. Du kannst die Berechtigung in den Einstellungen erteilen.</string>
    <string name="settings">Einstellungen</string>
    <string name="cancel">Abbrechen</string>
    <string name="clicktext">Durch Tippen auf die Diagramme kannst du jeweils andere Werte betrachten</string>
    <string name="run_instructions">Wenn du auf deine Geschwindigkeit tippst, kannst du ihre Einheit ändern und dir deine Durchschnittsgeschwindigkeit anschauen.\n\n
                                    Die Karte bietet im oberen rechten Rand außerdem einen Knopf, mit dem sich die Standortverfolgung an und ausschalten lässt.</string>

</resources>
