<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codecamp.bitfit.fragments.ProfileFragment">

    <LinearLayout
        android:id="@+id/profile_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/name"
                android:layout_marginStart="32dp"
                android:layout_centerVertical="true"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/edittext_profile_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="32dp"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/gender"
                android:layout_marginStart="32dp"
                android:layout_centerVertical="true"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinner_profile_gender"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="32dp"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/birthday"
                android:layout_marginStart="32dp"
                android:layout_centerVertical="true"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/edittext_profile_birthday"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="32dp"
                android:layout_centerVertical="true"
                android:inputType="date"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/height"
                android:layout_marginStart="32dp"
                android:layout_centerVertical="true"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/edittext_profile_height"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="32dp"
                android:layout_centerVertical="true"
                android:inputType="number"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/weight"
                android:layout_marginStart="32dp"
                android:layout_centerVertical="true"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/edittext_profile_weight"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="32dp"
                android:layout_centerVertical="true"
                android:inputType="numberDecimal"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_profile_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profile_linear_layout"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="64dp"/>
</RelativeLayout>
