<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codecamp.bitfit.activities.HomeFragment">

    <!-- TODO Icons benutzen -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_last_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/last_activity"
                android:padding="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                ></LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="16dp"
                android:text="BMI"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"></LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_highscore_pushups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="16dp"
                android:text="@string/highscore_pushups"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"></LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/cardview_highscore_squats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="16dp"
                android:text="@string/highscore_squats"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"></LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/cardview_highscore_run"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="16dp"
                android:text="@string/highscore_run"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"></LinearLayout>
        </android.support.v7.widget.CardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"></FrameLayout>
    </LinearLayout>
</ScrollView>
